[package]
name = "irokle"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "irokle-derive"]
resolver = "3"

[features]
default = []
fjall = ["dep:fjall"]
iroh = ["dep:iroh", "dep:tokio"]

[dependencies]
blake3 = "1.8.5"
bytes = { version = "1.11.1", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }
fjall = { version = "3.1.4", optional = true }
iroh = { version = "1.0.0-rc.0", optional = true }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"], optional = true }
irokle-derive = { path = "irokle-derive" }

[dev-dependencies]
futures = "0.3"
tempfile = "3"

[[example]]
name = "iroh_chat"
required-features = ["iroh"]

[[example]]
name = "iroh_topic_intro"
required-features = ["iroh"]

[[example]]
name = "iroh_fjall_recovery"
required-features = ["iroh", "fjall"]
