[package]
name = "irokle"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Signed Merkle-DAG operation log for invite-only topics"

[workspace]
members = [".", "irokle-derive"]
resolver = "3"

[features]
default = []
fjall = ["dep:fjall"]
iroh = ["dep:iroh", "dep:tokio"]

# Ed25519 verification dominates sync tests in debug builds (~15 ms per op
# instead of ~40 µs); optimize the crypto crates so test timings reflect
# protocol behavior.
[profile.dev.package.ed25519-dalek]
opt-level = 3

[profile.dev.package.curve25519-dalek]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3

[profile.dev.package.blake3]
opt-level = 3

[dependencies]
blake3 = "1.8.5"
bytes = { version = "1.11.1", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
fjall = { version = "3.1.4", optional = true }
getrandom = "0.4.2"
iroh = { version = "1.0.0-rc.1", optional = true }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
], optional = true }
tracing = "0.1.44"
irokle-derive = { path = "irokle-derive" }

[dev-dependencies]
ctor = "1.0.7"
futures = "0.3.32"
patchbay = "0.5.2"
tempfile = "3.27.0"

[[example]]
name = "iroh_chat"
required-features = ["iroh"]

[[example]]
name = "iroh_topic_intro"
required-features = ["iroh"]

[[example]]
name = "iroh_fjall_recovery"
required-features = ["iroh", "fjall"]
