[package]
name = "auto-irokle"
version = "0.1.0"
edition = "2024"
description = "Autosurgeon-style document layer for irokle"
license = "MIT OR Apache-2.0"

[dependencies]
auto-irokle-derive = { path = "../auto-irokle-derive" }
facet = "0.46.5"
irokle = { path = ".." }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
