[package]
name = "auto-irokle"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Autosurgeon-style document layer for irokle"
license = "MIT OR Apache-2.0"

[features]
default = []
fjall = ["irokle/fjall"]

[dependencies]
auto-irokle-derive = { path = "../auto-irokle-derive" }
irokle = { path = ".." }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
